feat(styling): added bootstrap and fontawesome

--- a/encyclopedia/templates/encyclopedia/add.html
+++ b/encyclopedia/templates/encyclopedia/add.html
@@ -18,7 +18,10 @@ Create New Page
 <form method="post" action="{% url 'add' %}">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" value="Create">
+  <button type="submit" class="btn btn-primary">
+    <i class="fas fa-plus mr-2"></i>
+    Add Page
+  </button>
 </form>
 
 {% endblock %}
