--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -9,7 +9,8 @@ code {
 
 h1 {
     margin-top: 0px;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 textarea {
@@ -31,8 +32,27 @@ textarea {
     background-color: #f0f0f0;
     height: 100vh;
     padding: 20px;
+    padding-left: 30px;
 }
 
 .sidebar h2 {
     margin-top: 5px;
+    margin-bottom: 20px;
 }
+
+.sidebar div{
+    margin-top: 10px;
+}
+
+.search-icon {
+    position: absolute;
+    margin-top: 12px;
+    margin-left: 10px;
+    color: rgba(73, 80, 87, 0.7);
+    font-size: 14px;
+}
+
+.search-input{
+   padding-left: 30px;
+}
+
