--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -8,6 +8,11 @@
 
 {{ entry|safe }}
 
-<a href="{% url 'edit' title %}">Edit</a>
+{% if not error %}
+<a href="{% url 'edit' title %}" class="btn btn-primary mt-3">
+  <i class="fas fa-edit mr-2"></i>
+  Edit Page
+</a>
+{% endif %}
 
 {% endblock %}
