--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -7,12 +7,14 @@ Encyclopedia
 {% block body %}
 <h1>All Pages</h1>
 
-<ul>
+<div class="list-group">
     {% for entry in entries %}
-    <li>
-        <a href="{% url 'entry' entry %}">{{ entry }}</a>
-    </li>
+
+    <a href="{% url 'entry' entry %}" class="list-group-item list-group-item-action">
+        <i class="fas fa-book mr-2"></i>
+        {{ entry }}
+    </a>
     {% endfor %}
-</ul>
+</div>
 
 {% endblock %}
