--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -13,7 +13,7 @@ Search Results
 <div class="list-group">
   {% for entry in results %}
   <a href="{% url 'entry' entry %}" class="list-group-item list-group-item-action">
-    <i class="fas fa-book mr-2"></i>
+    <i class="fa-regular fa-file-lines mr-2"></i>
     {{ entry }}
   </a>
   {% endfor %}
