--- a/encyclopedia/templates/encyclopedia/add.html
+++ b/encyclopedia/templates/encyclopedia/add.html
@@ -5,23 +5,33 @@ Create New Page
 {% endblock %}
 
 {% block body %}
-<h1>Create New Page</h1>
-
-<!-- show error -->
-{% if error %}
-<div class="alert alert-danger" role="alert">
-  {{ error }}
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb bg-transparent px-2">
+    <li class="breadcrumb-item">
+      <a href="{% url 'index' %}">
+        Home
+      </a>
+    </li>
+    <li class="breadcrumb-item active" aria-current="page">Add Page</li>
+  </ol>
+</nav>
+<div class="px-2">
+  <h1>Create New Page</h1>
+  <!-- show error -->
+  {% if error %}
+  <div class="alert alert-danger" role="alert">
+    {{ error }}
+  </div>
+  {% endif %}
+  <!-- show add entry form -->
+  <form method="post" action="{% url 'add' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">
+      <i class="fas fa-plus mr-2"></i>
+      Add Page
+    </button>
+  </form>
 </div>
-{% endif %}
-
-<!-- show add entry form -->
-<form method="post" action="{% url 'add' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" class="btn btn-primary">
-    <i class="fas fa-plus mr-2"></i>
-    Add Page
-  </button>
-</form>
 
 {% endblock %}
