--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -11,7 +11,7 @@ Encyclopedia
     {% for entry in entries %}
 
     <a href="{% url 'entry' entry %}" class="list-group-item list-group-item-action">
-        <i class="fas fa-book mr-2"></i>
+        <i class="fa-regular fa-file-lines mr-2"></i>
         {{ entry }}
     </a>
     {% endfor %}
